Fix - standardise content body spacing across all sites (#713)

--- a/src/app-cosmo-site/styles/additional/components/_content-body.scss
+++ b/src/app-cosmo-site/styles/additional/components/_content-body.scss
@@ -8,7 +8,8 @@
     }
 
     p, &__paragraph {
-        margin-top: 10px;
+        margin: 20px 0;
+        padding: 0;
     }
 
     &__heading {
